@@ -188,6 +188,14 @@
     type=custom
 [/advanced_preference]
 
+[advanced_preference]
+    field=damage_prediction_allow_monte_carlo_simulation
+    name= _ "Allow damage calculation with Monte Carlo simulation"
+    description= _ "Allow the damage calculation window to simulate fights instead of using exact probability calculations"
+    type=boolean
+    default=no
+[/advanced_preference]
+
 #ifdef __UNUSED__
 [advanced_preference]
     field=joystick_support_enabled
