@@ -32,6 +32,16 @@ Version 1.13.4+dev:
    * Added "Registered users only" checkbox to multiplayer configuration dialog which 
      when checked, only allows registered users to join the game
 
+ * Performance:
+   * Added an advanced preference (Preferences -> Advanced ->
+     Allow damage calculation with Monte Carlo simulation) that, when enabled,
+     allows the damage calculation to operate by simulating a few thousand fights
+     instead of calculating exact probabilities of each outcome (when a heuristic
+     determines that it's probably faster). This method is inexact, but in very
+     complex battles (extremely high HP, drain, slow, berserk, etc.) it's
+     significantly faster than the default damage calculation method, and may be
+     necessary for acceptable performance.
+
 Version 1.13.4:
  * Language and i18n:
    * Updated translations: British English, Russian.
